--- a/templates/input.html
+++ b/templates/input.html
@@ -8,7 +8,7 @@
 <center><h1>Country Code</h1></center><br><br>
 
 
-<form action="http://localhost:5000" method="post">
+<form action="" method="post">
     <div><center>
      User Country Code:<input type="text"  name="mobnum" placeholder="Enter country code"><br><br>
      User Country name:<input type="text"  name="pas" placeholder="Enter country name"><br>
